[package]
name = "exact-conv"
version = "0.1.0"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Exact conversions between integer and floating point types."
license = "MIT"
edition = "2018"
repository = "https://github.com/FedericoStra/exact-conv"
keywords = ["mathematics", "conversion", "integers", "floating-point"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.release]
no-dev-version = true
